6667042: PrintAssembly option does not work without special plugin

Remove old private plugin interface, simplify, rework old plugin to use unchanged Gnu sources

Reviewed-by: kvn, rasbold